@@ -1,3 +1,8 @@
+2007-10-02  Alan McGovern <alan.mcgovern@gmail.com> 
+
+	* src/Camera.cs: Exposing the usb device and bus numbers to make it easier
+	  to identify the device explicitly.
+
 2007-10-01  Alan McGovern <alan.mcgovern@gmail.com> 
 
 	* src/File.cs: Added a setter for Rating
